--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
         <main class="DesignToolLayout-page-content">
             <h1>Design Tools</h1>
 
-            <p><strong>Saving instructions:</strong> Any of these tools can be
-            easily saved, or even modified. First, click the "Pencil" icon to
-            see the source code for the tool. They are all written with the <a
-            href="https://modulojs.org/">Modulo.js</a> framework. Then, click
-            the "SAVE" button (possibly hidden below the "RUN").</p>
+            <!--
+                <p><strong>Saving instructions:</strong> Any of these tools can be
+                easily saved, or even modified. First, click the "Pencil" icon to
+                see the source code for the tool. They are all written with the <a
+                href="https://modulojs.org/">Modulo.js</a> framework. Then, click
+                the "SAVE" button (possibly hidden below the "RUN").</p>
+            -->
 
-            <p><strong>A collection of tools, free and open source, for designers and
-            web developers everywhere.</strong></p>
+            <p>A collection of free and open source web design tools. Edit &amp; save any tool!</p>
         </main>
         <x-ToolGrid></x-ToolGrid>
     </div>
