--- a/static/designtools/QuickPalette.html
+++ b/static/designtools/QuickPalette.html
@@ -1,25 +1,39 @@
 <DesignUtil></DesignUtil>
 <Template>
-    <h2>Quick CSS Palette</h2>
     <main>
         <section>
             <div style="scheme">
                 {% for index, row in state.palette %}
-                    <div style="background-color: {{ row|get:1 }}; --color-fg: #fff">
-                        <input [state.bind] name="palette.{{ index }}.0" /><strong>:</strong>
-                        <input [state.bind] name="palette.{{ index }}.1" type="color" />
+                    <!--<div style="background-color: {{ row|get:1 }}; --color-fg: {{ row|get:1|fgcolor }}">-->
+                    <pre>{{ state.palette|json }}</pre>
+                    <!-- TODO: Need to fix this, maybe in CPArt for now, until
+                    a good in-engine solution is documented? (issue with bind
+                    not getting re-applied since it seems like nothing was
+                    rebound) -->
+                    <div>
+                        <label>
+                            <input [state.bind] name="palette.{{ index }}.1" type="color" />
+                            <input [state.bind] name="palette.{{ index }}.0" type="text" />
+                        </label>
+                        <button
+                            @click:=state.palette.removeAt
+                            payload:='{{ index }}'
+                        >X</button>
+                        <button
+                            @click:=state.palette.push
+                            payload:='[ "{{ row|get:0 }}-s5", "#888888" ]'
+                        >+T</button>
+                        <button
+                            @click:=state.palette.push
+                            payload:='[ "{{ row|get:0 }}-s5", "#888888" ]'
+                        >+S</button>
                     </div>
                 {% endfor %}
             </div>
-            <hr />
-            <div style="add-section">
-                <input [state.bind] name="name" /><strong>:</strong>
-                <input [state.bind] name="color" type="color" />
-            </div>
             <button
                 @click:=state.palette.push
-                payload:="[ {{ state.name|json }}, {{ state.color|json }} ]"
-            >Add</button>
+                payload:='[ "color", "#888888" ]'
+            >+</button>
         </section>
         <section>
 <pre>:host {
@@ -29,38 +43,41 @@
     </main>
 </Template>
 
-
 <State
-    name="color"
-    color="#ffffff"
     palette:='[
         [ "primary", "#551100" ],
         [ "secondary", "#951190" ]
     ]'
+    shades:='[]'
+    tints:='[]'
 ></State>
 
 <Style>
     :host {
         font-family: sans-serif;
     }
-    h2 {
-        font-weight: 100;
-    }
     main {
-        border: 2px solid black;
         display: grid;
-        padding: 10px;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 2fr 1fr;
     }
     section {
         border: 2px solid black;
         padding: 10px;
     }
     input {
-        width: 100px;
-        background: #ffffff00;
-        border: 2px solid var(--color-fg);
-        color: var(--color-fg);
+        width: 50px;
+        background: #ffffff33;
+        border: none;
+        padding: 5px;
+        height: 50px;
+    }
+    input[type=text] {
+        position: relative;
+        right: -10px;
+    }
+    label {
+        position: relative;
+        display: inline-block;
     }
 </Style>
 
